--- a/SimTECH/SimTECH/Pages/Racing/Race.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Race.razor
@@ -725,11 +725,11 @@
     async Task ShowGapperChart()
     {
         var parameters = new DialogParameters { ["Drivers"] = Model.RaceDrivers };
-        _ = await _dialogService.ShowAsync<GapChartDialog>("Gapper chart", parameters, Constants.DefaultChartDialogSettings);
+        _ = await _dialogService.ShowAsync<GapChartDialog>("Gapper chart", parameters);
     }
     async Task ShowPositionChart()
     {
         var parameters = new DialogParameters { ["Drivers"] = Model.RaceDrivers };
-        _ = await _dialogService.ShowAsync<PositionChangeChart>("Position chart", parameters, Constants.DefaultChartDialogSettings);
+        _ = await _dialogService.ShowAsync<PositionChangeChart>("Position chart", parameters);
     }
 }
